# Privacy-Protected-Logistic-Regression

./: CMakeLists.txt  README.md  test.txt
Dataset/: wdbc.names
arcene/: README.md
src/: defines.hpp  ideal_functionality.cpp  linear_regression.cpp  linear_regression.hpp  logistic_regression.cpp  logistic_regression.hpp  offline_phase.cpp  offline_phase.hpp  oldonline.cpp  oldonline.hpp  online_phase.cpp  online_phase.hpp  pplr.cpp  preparation.cpp  preparation.hpp  read_Arcene.cpp  read_Arcene.hpp  read_MNIST.hpp  read_WBDC.cpp  read_WBDC.hpp  secureML.cpp  setup_phase.cpp  setup_phase.hpp  sigmoid.cpp  sigmoid.hpp  test_logistic_regression.cpp  test_logistic_regression.hpp  test_offline_phase.cpp  test_offline_phase.hpp  test_online_phase.cpp  test_online_phase.hpp  util.cpp  util.hpp
弃用文件/: defines.hpp  linear_regression.cpp  online_phase.cpp  online_phase.hpp  secureML.cpp
